<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_margin="40dp"
   >
    <!--table data-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        />

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="2dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"

        >



        <EditText

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit1"
            android:layout_weight="4"
            android:inputType="text"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColorHint="@color/black"
            android:gravity="center_horizontal"
            />

    </TableRow>

    <TableRow

        >
        <EditText

            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit2"
            android:layout_weight="4"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"


            />
    </TableRow>

    <TableRow

        >

        <Button

            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_weight="4"
            android:background="@color/teal_200"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/btn3"
            android:textColor="@color/white"
            android:textSize="30sp"


            />



    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btn1"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/btn4"
            android:textColor="@color/purple_500"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:background="@color/teal_200"
            android:textAlignment="center"
            android:textStyle="bold"


            />
    </TableRow>


</TableLayout>